--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gabegaglio.github.io/pomobud",
+  "homepage": ".",
   "name": "pomoweb",
   "version": "0.1.0",
   "private": true,
